--- a/main/templates/main/developers.html
+++ b/main/templates/main/developers.html
@@ -5,3 +5,10 @@
 {% block pagename %}
 Разработчики
 {%endblock%}
+
+{% block pageContent %}
+{% for developer in developer_list %}
+    {{ developer }}<br>
+{% endfor %}
+
+{% endblock %}
