TDP-10 add methods for hash SHA256 and SHA1

--- a/main/templates/main/developers.html
+++ b/main/templates/main/developers.html
@@ -8,7 +8,7 @@
 
 {% block pageContent %}
 {% for developer in developer_list %}
-    {{ developer }}<br>
-{% endfor %}
+    {{ developer }}
 
+{% endfor %}
 {% endblock %}
